<resources>
    <string name="app_name">¿Hay Chico?</string>
    <string name="mensaje_login">Necesitas tener una cuenta para poder iniciar en la aplicaciòn.</string>
    <string name="Ingresar">Ingresar</string>
    <string name="mensaje_2">No tienes cuenta? Registrate AQUI.</string>
    <string name="Email">Correo</string>
    <string name="Clave">Password</string>
    <string name="registrate">Registrate</string>
    <string name="facebook_app_id">152233122089365</string>
    <string name="fb_login_protocol_scheme">fb152233122089365</string>
    <string name="Datos">Ingresa tus datos personales</string>
    <string name="hint_nombre">Nombre y Apellidos</string>
    <string name="hint_celular">Celular</string>
    <string name="paswwor">confirmar Password</string>
    <string name="your_string_here"> <u>AYUDA!</u></string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_compl__perfil">Compl_Perfil</string>
    <string name="apodo">Apodo Futbolistico</string>
    <string name="Completar_Perfil">Completar Perfil</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="calificacion">Calificacion</string>
    <string name="title_activity_fichajes">Fichajes</string>
    <string name="posicion">Posición</string>
    <string name="edad">Edad</string>
    <string name="Ciudad">Ciudad</string>
    <string name="buscardor">Nombre Equipo</string>
    <string name="atras">Atras</string>
    <string name="Actualizar">Actualizar</string>
    <string name="info">Hemos actualizado tu ubicación, así te podrán encontrar partidos y equipos cercanos a ti.</string>
    <string name="info_2">Selecciona el lugar, la hora y fecha del partido</string>
    <string name="search">Nombre Equipo</string>
    <string name="search2">Nombre Jugador</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="invitar">Invitar</string>
    <string name="nombre">Nombre</string>
    <string name="volver">Volver</string>
    <string name="mis_partido">Mis Partidos</string>
    <string name="mis_equipos">Mis Equipos</string>
    <string name="hay_chico">¿Hay Chico?</string>
    <string name="nombre_equipo">Nombre Equipo</string>
    <string name="tengo_chico">Tengo Chico</string>
    <string name="crear_equipo">Crear Equipo</string>
    <string name="ingrese_los_datos">Ingrese Los Datos</string>
    <string name="busca_rival">Reserva y busca rival</string>
    <string name="busca_rival2">Busca rival</string>
    <string name="no_hay_ninguna_notificaci_n">No hay ninguna Notificación</string>
    <string name="no_hay_partidos">No Hay Partidos</string>
    <string name="banner_inferior_ad_unit_id">ca-app-pub-8067834228961607/5046208175</string>
    <string name="ca_app_pub">ca-app-pub-8067834228961607/5046208175</string>
    <string name="info_hay_chico">Con el botón ¿Hay Chico? activado, permite que tu perfil este visible para que equipos que necesiten jugadores para sus partidos inmediatos puedan ficharte y jugar con ellos.
</string>
    <string name="info_hay_equipo">Actívalo, si quieres que tu escuadra sea visible para los otros equipos y estos puedan retarte en un partido de fútbol.
</string>
    <string name="info_hay_chico_2">Con el botón tengo chico activado, permite que los usuarios de la aplicación puedan postularse a completar tu equipo para el partido y que no te falte jugadores a la hora de juego.
</string>
    <string name="registra">¿No tienes cuenta? <b> REGÍSTRATE AQUÍ </b> </string>
    <string name="next">SiGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">ENTRAR</string>
    <string name="ceder">Solo podrás ceder la capitanía  a jugadores que hayan verificado su cuenta.</string>
    <string name="reservas_off">Haz la reserva por otro medio y selecciona hora, fecha y lugar de esta misma. Recuerda que <b><i>NO ESTAS RESERVANDO </i></b>a través de ¿Hay chico?</string>
    <string name="reservas_off_"> <b><i>En el momento no tenemos convenio con alguna chancha, estamos trabajando es ello.  </i>Haz tu reserva aparte y ve a “Buscar rival”</b></string>
    <string name="info_chat_partido">En este espacio solo los capitanes de los equipos podrán hablar todo lo pertinente al partido.  <b><i>Desde porcentajes de la cancha, hasta la cancelación del partido,</i></b> que solo lo podrá hacer el responsable de la reserva. Accediendo a su equipo, en reservas realizadas.</string>
    <string name="suspencion"> Hemos suspendido tu cuenta de ¿Hay Chico? porque sospechamos que has violado  nuestro términos y condiciones de uso </string>
    <string name="suspencion_2">Si crees que hemos suspendido tu cuenta por error. Escríbenos a  </string>
</resources>