<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_ini_3"
    android:orientation="vertical"
    tools:context=".SplashScreen.login.Login">

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttonLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/negro_tras"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColorHint="@color/Texto"
                app:errorTextAppearance="@style/Error"
                tools:ignore="RtlHardcoded">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/Texto"
                    android:textSize="18sp"
                    app:theme="@style/AppTheme_2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColorHint="@color/Texto"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorTextAppearance="@style/Error"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/Blanco"
                app:theme="@style/AppTheme_2"
                tools:ignore="RtlHardcoded">

                <EditText
                    android:id="@+id/pass_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Contraseña"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/Texto"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/linkSignup"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/fondo_botones"
                android:text="@string/Ingresar"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/linkSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout22"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="olvide_mi_contraseña"
                android:text="Olvidé mi contraseña"
                android:textColor="@color/Texto"
                android:textSize="15sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="138dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:lines="1"
                android:onClick="terminos_y_condicones"
                android:text="@string/registra"
                android:textAlignment="center"
                android:textColor="@color/Texto"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
